welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:1: error: not found: value While
While(!estFaceMur){
^